--- a/force-app/main/default/classes/Covid19.cls
+++ b/force-app/main/default/classes/Covid19.cls
@@ -8,7 +8,7 @@ public class Covid19 {
     }
     public Covid19(Integer recuperadosCidade){
         this();
-        System.debug('Constructor2 está sendo chamado, nova change');
+        System.debug('Constructor2 está sendo chamado, nova change2');
         this.recuperadosCidade = recuperadosCidade;
         recuperadosPais = recuperadosCidade;
     }
