New change on apex

--- a/force-app/main/default/classes/Covid19.cls
+++ b/force-app/main/default/classes/Covid19.cls
@@ -17,7 +17,7 @@ public class Covid19 {
         recuperadosCidade++;
         recuperadosPais++;        
     } 
-    
+    //change feature3
     public Static void pacientesPais(){
         System.debug('Numero de casos no Pais é de :' + recuperadosPais);
     }
